<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/period_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_today"
            android:orderInCategory="1"
            android:title="@string/today"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_this_week"
            android:orderInCategory="2"
            android:title="@string/this_week"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_this_month"
            android:orderInCategory="3"
            android:title="@string/this_month"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_this_year"
            android:orderInCategory="4"
            android:title="@string/this_year"
            app:showAsAction="never" />
    </group>
</menu>

