<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/mrl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleColor="#585858"
            app:mrl_rippleDelayClick="false"
            app:mrl_rippleHover="true"
            app:mrl_rippleOverlay="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/dimen_medium"
                    android:paddingLeft="@dimen/dimen_medium"
                    android:paddingRight="@dimen/dimen_medium"
                    android:paddingTop="@dimen/dimen_medium">

                    <com.app.githubapp.widget.CustomTextViewRegular
                        android:id="@+id/textview_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/github_text"
                        android:textSize="@dimen/text_large"
                        tools:text="This is the title" />

                    <com.app.githubapp.widget.CustomTextViewRegular
                        android:id="@+id/textview_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_small"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textColor="@color/md_grey_700"
                        android:textSize="@dimen/text_medium"
                        tools:text="This is the subtitle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <com.app.githubapp.widget.CustomTextViewAwesome
                                android:id="@+id/textview_fa_circle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/fa_circle"
                                android:textColor="@color/colorPrimaryDark" />

                            <com.app.githubapp.widget.CustomTextViewRegular
                                android:id="@+id/textview_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@+id/textview_fa_circle"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:textColor="@color/font_black_4"
                                android:textSize="@dimen/text_small"
                                tools:text="Language" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <com.app.githubapp.widget.CustomTextViewAwesome
                                android:id="@+id/textview_fa_star"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/fa_star"
                                android:textColor="@color/accent" />

                            <com.app.githubapp.widget.CustomTextViewRegular
                                android:id="@+id/textview_stargazers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@+id/textview_fa_star"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:textColor="@color/font_black_4"
                                android:textSize="@dimen/text_small"
                                tools:text="23 stars this week" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_weight="0.5">

                            <com.app.githubapp.widget.CustomTextViewAwesome
                                android:id="@+id/textview_fa_network"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/fa_network"
                                android:textColor="@color/green" />

                            <com.app.githubapp.widget.CustomTextViewRegular
                                android:id="@+id/textview_fork"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@+id/textview_fa_network"
                                android:ellipsize="end"
                                android:singleLine="true"
                                android:textColor="@color/font_black_4"
                                android:textSize="@dimen/text_small"
                                tools:text="123" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5">

                            <com.app.githubapp.widget.CustomTextViewAwesome
                                android:id="@+id/textview_fa_user"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/fa_user"
                                android:textColor="@color/font_black_4" />

                            <com.app.githubapp.widget.CustomTextViewRegular
                                android:id="@+id/textview_built_by"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@+id/textview_fa_user"
                                android:text="@string/built_by"
                                android:textColor="@color/font_black_4" />

                            <ImageView
                                android:id="@+id/imageview_owner"
                                android:layout_width="@dimen/row_imageview_size"
                                android:layout_height="@dimen/row_imageview_size"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="@dimen/dimen_small"
                                android:layout_marginStart="5dp"
                                android:layout_toEndOf="@+id/textview_built_by"
                                android:contentDescription="cd owner" />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.balysv.materialripple.MaterialRippleLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>